<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/logging_fragment"
    tools:context="activities.signup.NameStepFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left_summary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right_summary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start_content_summary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end_content_summary"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>

    <LinearLayout
        app:layout_constraintStart_toStartOf="@id/guideline_left_summary"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_summary"
        app:layout_constraintTop_toTopOf="@id/guideline_start_content_summary"
        app:layout_constraintBottom_toTopOf="@id/btn_go_next"
        android:layout_width="@dimen/general_0dp"
        android:layout_height="@dimen/general_0dp"
        android:orientation="vertical"
        android:id="@+id/login_data_input">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:gravity="center"
            android:text="@string/signup_register_title"
            android:textSize="@dimen/text_size_16"
            android:id="@+id/register_text"/>

        <ProgressBar
            android:progress="25"
            style="@style/registerProgressBar"
            android:id="@+id/progress_bar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/general_20dp"
            android:textColor="@color/grey"
            android:gravity="center"
            android:text="@string/signup_register_message"
            android:textSize="@dimen/text_size_16"
            android:id="@+id/signup_register_message" />

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="@dimen/signup_input_margin_top"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_register_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="@id/guideline_left_summary"
        app:layout_constraintEnd_toEndOf="@id/guideline_right_summary"
        app:layout_constraintBottom_toBottomOf="@id/guideline_end_content_summary"
        android:layout_width="@dimen/general_0dp"
        android:layout_height="@dimen/startup_signup_button_height"
        style="@style/purpleGradientButton"
        android:text="@string/btn_next"
        android:id="@+id/btn_go_next"/>

</androidx.constraintlayout.widget.ConstraintLayout>